--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -52,32 +52,32 @@ body > header {
 body > header hgroup,
 body > header nav {
     min-width: 200px;
-    max-width: 980px;
+    max-width: 800px;
     margin: 0 auto;
-    padding-right: 45px;
-    padding-left: 45px;
+    padding-right: 2rem;
+    padding-left: 2rem;
 }
 
 main {
     min-width: 200px;
-    max-width: 980px;
+    max-width: 800px;
     margin: 0 auto;
-    padding-left: 45px;
-    padding-right: 45px;
+    padding-left: 2rem;
+    padding-right: 2rem;
     padding-top: 0px;
 }
   
 body > footer {
     min-width: 200px;
-    max-width: 980px;
+    max-width: 800px;
     position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
     margin: 0 auto;
     padding-top: 1rem;
-    padding-left: 45px;
-    padding-right: 45px;
+    padding-left: 2rem;
+    padding-right: 2rem;
     border: solid rgb(168,200,220);
     border-width: 0.2rem 0 0 0;
 	color: rgb(51,103,153);
@@ -311,7 +311,8 @@ body > header h1 {
     margin-top: 0;
     margin-bottom: 0.2em;
     padding: 0;
-    font-size: 5vmin;
+    /*font-size: 5vmin;*/
+    font-size: 3em;
 	color: rgb(168,200,220);
     border-bottom: none;
     background: none;
