--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -174,6 +174,15 @@ img {
     vertical-align: middle
 }
 
+/* <img class="side"> makes the image float to the right, but only if the screen
+   is wide enough. Note: Large images will not look good. */
+@media (min-width: 40rem) {
+    img.side {
+        float: right;
+        margin: 0.2rem 0 0.2rem 0.5rem;
+    }
+}
+
 code,
 kbd {
     font-family: Hack, monospace;
