--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -45,6 +45,7 @@ body > header {
     /* Header image is full screen width; contained elements are the nominal page width. */
     padding-top: 1rem;
     padding-bottom: 0.1rem;
+    margin-bottom: 1rem;
 	color: rgb(168,200,220);
 	background: rgb(51,103,153) url(header.jpg) no-repeat top right -250px;
 }
@@ -293,7 +294,6 @@ li > p {
 }
 
 dl {
-    padding-left: 1em;
 	list-style: inside;
 	list-style-image: url(dings.gif);
 }
