--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -182,6 +182,24 @@ img.side {
     max-width: 50%;
 }
 
+/* For an image with a caption, use <figure><img><figcaption> */
+figure {
+    margin: 0.2rem 0.2rem 0.2rem 0;
+    vertical-align: middle
+}
+
+/* class="side" also works with <figure> */
+figure.side {
+    float: right;
+    margin: 0.2rem 0 0.2rem 0.5rem;
+    max-width: 50%;
+}
+
+figcaption {
+    font-style: italic;
+	color: rgb(51,103,153);
+}
+
 code,
 kbd {
     font-family: Hack, monospace;
