--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -66,7 +66,7 @@ main {
     padding-top: 0px;
 }
   
-body > footer {
+body > xfooter {
     min-width: 200px;
     max-width: 800px;
     position: absolute;
@@ -74,6 +74,24 @@ body > footer {
     bottom: 0;
     left: 0;
     margin: 0 auto;
+    padding-top: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border: solid rgb(168,200,220);
+    border-width: 0.2rem 0 0 0;
+	color: rgb(51,103,153);
+    font-size: 0.85em;
+    font-weight: bold;
+}
+  
+body > footer {
+    min-width: 200px;
+    max-width: 800px;
+    xposition: absolute;
+    xright: 0;
+    xbottom: 0;
+    xleft: 0;
+    margin: 2rem auto;
     padding-top: 1rem;
     padding-left: 2rem;
     padding-right: 2rem;
