--- a/css/site.css
+++ b/css/site.css
@@ -71,9 +71,7 @@ body > footer {
     min-width: 200px;
     max-width: 800px;
     margin: 2rem auto;
-    padding-top: 1rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding: 1rem 2rem 2rem 2rem;
     border: solid rgb(168,200,220);
     border-width: 0.2rem 0 0 0;
 	color: rgb(51,103,153);
