--- a/css/site.css
+++ b/css/site.css
@@ -134,11 +134,11 @@ h1 {
 }
 
 h2 {
-    padding-bottom: 0.3em;
+    /*padding-bottom: 0.3em;*/
     padding-left: 20px;
     font-size: 1.5em;
 	color: rgb(51,103,153);
-    border-bottom: 1px solid rgb(168,200,220);
+    /*border-bottom: 1px solid rgb(168,200,220);*/
 	background: url(ding.png) no-repeat left top 40%;
 }
 
