--- a/css/site.css
+++ b/css/site.css
@@ -471,6 +471,7 @@ body > header nav ul {
 body > header nav li {
     display: inline;
 	list-style-type: none;
+	background: none;
     padding-left: 6px;
     padding-right: 2px;
 	border-left: 1px solid rgb(168,200,220);
