--- a/site-files/css/site.css
+++ b/site-files/css/site.css
@@ -195,6 +195,8 @@ aside {
     float: right;
     margin: 0.2rem 0 0.2rem 0.5rem;
     max-width: 50%;
+    font-style: italic;
+	color: rgb(51,103,153);
 }
 
 aside img,
