--- a/site-files/css/site.css
+++ b/site-files/css/site.css
@@ -540,11 +540,12 @@ hr::after {
 
 /* custom grid layout tags */
 g-row {
-    display: block
+    display: block;
 }
 
 g-col {
-    display: inline
+    display: inline;
+    vertical-align: middle;
 }
 
 @media (min-width: 50rem) {
@@ -563,4 +564,10 @@ g-col {
         padding-left: 0.1rem;
         padding-right: 0;
     }
+}
+
+/* custom tag to prevent line wrapping in a span */
+no-wrap {
+    display: inline;
+    white-space: nowrap;
 }
