--- a/site-files/css/fonts.css
+++ b/site-files/css/fonts.css
@@ -1,4 +1,7 @@
-/* Main font - Roboto */
+/* Main font - Roboto
+ * https://fonts.google.com/specimen/Roboto/about?query=roboto
+ * License: https://www.apache.org/licenses/LICENSE-2.0
+ */
 
 /* cyrillic-ext */
 @font-face {
