--- a/site-files/css/site.css
+++ b/site-files/css/site.css
@@ -24,7 +24,7 @@
 html {
     text-size-adjust: 100%;
     color: black;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
     font-size: 1.05rem;
     line-height: 1.5;
     overflow-wrap: break-word;
@@ -152,7 +152,7 @@ h1 {
     font-size: 2em;
 	color: rgb(51,103,153);
     border-bottom: 1px solid rgb(168,200,220);
-	background: url(ding.svg) no-repeat left top 0.4em;
+	background: url(ding.svg) no-repeat left top 0.45em;
     background-size: 0.4em
 }
 
@@ -160,7 +160,7 @@ h2 {
     padding-left: 0.6em;
     font-size: 1.5em;
 	color: rgb(51,103,153);
-	background: url(ding.svg) no-repeat left top 0.4em;
+	background: url(ding.svg) no-repeat left top 0.45em;
     background-size: 0.4em
 }
 
@@ -350,7 +350,7 @@ ol ol ol {
 
 ul > li {
     padding-left: 0.8em;
-	background: url(ding.svg) no-repeat left top 0.45em;
+	background: url(ding.svg) no-repeat left top 0.5em;
     background-size: 0.5em
 }
 
@@ -508,7 +508,7 @@ body > header nav #navCheck:checked + ul {
     body > header nav ul {
         display: inline-block;
         padding-left: 0.75em;
-        background: url(dingh.svg) no-repeat left top 0.5em;
+        background: url(dingh.svg) no-repeat left top 0.55em;
         background-size: 0.53em
     }
     body > header nav label {
