RTL text support: undo a previous rtl change
(cherry picked from commit 52f83f99d8a447ad6e087bc9ca75ec51a1fa963e)

--- a/site-files/css/site.css
+++ b/site-files/css/site.css
@@ -222,8 +222,8 @@ aside {
 @media (min-width: 640px) {
     aside {
         clear: both;
-        float: inline-end;
-        margin: 0.2rem 0.2rem 0.2rem 0.5rem;
+        float: right;
+        margin: 0.2rem 0 0.2rem 0.5rem;
         max-width: 40%;
     }
 
